--- a/public/overview.html
+++ b/public/overview.html
@@ -72,42 +72,118 @@
       </div>
     </div>
     <!-- content -->
-    <!-- <section class="h-screen bg-white">
-      <div class="flex bg-white">
-        <div class="mx-12 mt-24 md:grid-cols-2 grid text-black">
-          <div class="order-last md:order-first">
-            <h1 class="text-black font-bold text-4xl mb-8">Overview</h1>
-            <p class="mb-16">
-              Nama saya Naf'an Nur 'Alim, saya adalah seorang UI / UX Desainer dan Front-End Developer.
-            </p>
-            <h1 class="text-black font-bold text-2xl">Pendidikan</h1>
-            <ul class="steps steps-vertical font-medium">
-              <li class="step step-primary">2012 - 2018 SD Islam Al-huda</li>
-              <li class="step step-primary">2018 - 2021 SMP Negeri 5 Semarang</li>
-              <li class="step step-primary">2021 - 2024 SMK Negeri 8 Semarang</li>
-            </ul>
-            <h1 class="text-black font-bold text-2xl mt-8">Pengalaman</h1>
-            <ul class="steps steps-vertical font-medium">
-              <li class="step step-primary">Maret 2022 - Juni 2022 Project Based Learning 1</li>
-              <li class="step step-primary">Agustus 2022 - November 2022 Project Based Learning 2</li>
-              <li class="step step-primary">
-                Februari 2023 - Mei 2023 Internship Rapier Technology National
-              </li>
-            </ul>
-          </div>
-          <div>
-            <figure class="aspect-square">
-              <img
-                class="w-64 mx-auto mb-12 rounded-lg"
-                src="/img/Yuzaki Tsukasa Project_ Bride Gallery January  Illustration Released (2).png"
-                alt=""
-              />
-            </figure>
-          </div>
+    <section class="">
+      <div class="mx-12 mt-24 grid md:grid-cols-2">
+        <div class="my-auto flex flex-col justify-center order-2 md:order-1">
+          <h1 class="text-3xl text-black font-bold">Overview</h1>
+          <p class="mt-4 text-black">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis pariatur incidunt iure officia
+            culpa, quo voluptates consequatur perspiciatis harum facilis.
+          </p>
+        </div>
+        <div class="my-auto flex justify-center order-1">
+          <img
+            class="aspect-auto w-48 rounded-lg items-center"
+            src="/img/Yuzaki Tsukasa Project_ Bride Gallery January  Illustration Released (2).png"
+            alt=""
+          />
         </div>
       </div>
-    </section> -->
-    <h1>Nafan Nur Alim</h1>
+      <hr class="my-12 mx-12" />
+      <!-- timeline -->
+      <div class="mx-12">
+        <h1 class="text-2xl text-black font-bold mb-4">Pendidikan</h1>
+        <ol class="relative border-l border-gray-200 dark:border-gray-700">
+          <li class="mb-10 ml-4">
+            <div
+              class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+            ></div>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+              >Juli 2018 - Juli 2021</time
+            >
+            <h3 class="text-lg font-semibold text-black">SMP Negeri 5 Semarang</h3>
+            <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
+              Saya menempuh pendidikan di SMP Negeri 5 Semarang selama 3 tahun dan lulus dengan nilai yang
+              baik
+            </p>
+          </li>
+          <li class="mb-10 ml-4">
+            <div
+              class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+            ></div>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+              >Juli 2021 - Juli 2024</time
+            >
+            <h3 class="text-lg font-semibold text-black">SMK Negeri 8 Semarang</h3>
+            <p class="text-base font-normal text-gray-500 dark:text-gray-400">
+              Saya juga bersekolah di SMK Negeri 8 Semarang selama 3 tahun dengan jurusan Pengembang Perangkat
+              Lunak dan Gim
+            </p>
+          </li>
+        </ol>
+        <h1 class="text-2xl text-black font-bold mb-4">Pengalaman</h1>
+        <ol class="relative border-l border-gray-200 dark:border-gray-700">
+          <li class="mb-10 ml-4">
+            <div
+              class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+            ></div>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+              >Maret 2022 - Juni 2022</time
+            >
+            <h3 class="text-lg font-semibold text-black">Project Based Learning 1 SMK Negeri 8 Semarang</h3>
+            <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
+              Saya menjadi ketua dan bertanggung jawab penuh atas analisa kebutuhan sistem dan membuat
+              tampilan antar muka website menggunakan Figma dalam pembuatan website promosi pakaian
+              <span
+                ><a class="hover:underline" href="https://lokalin.netlify.app/" target="_blank"
+                  >lokalin.netlify.app</a
+                ></span
+              >.
+            </p>
+          </li>
+          <li class="mb-10 ml-4">
+            <div
+              class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+            ></div>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+              >Agustus 2022 - November 2022
+            </time>
+            <h3 class="text-lg font-semibold text-black">Project Based Learning 2 SMK Negeri 8 Semarang</h3>
+            <p class="text-base font-normal text-gray-500 dark:text-gray-400">
+              Membuat dan menata tampilan antar muka dan bekerja sama dalam pembuatan website sistem
+              administrasi guru bersama kelompok dalam Project Based Learning tahap kedua.
+            </p>
+          </li>
+          <li class="mb-10 ml-4">
+            <div
+              class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+            ></div>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+              >Maret 2023
+            </time>
+            <h3 class="text-lg font-semibold text-black">Mengikuti Kelas Belajar Dasar-Dasar DevOps</h3>
+            <p class="text-base font-normal text-gray-500 dark:text-gray-400">
+              Saya mengikuti kelas Belajar Dasar-Dasar DevOps yang di selenggarakan oleh Dicoding dan AWS
+              dengan materi yang dipelajari diantaranya Pengenalan DevOps, Prinsip-Prinsip DevOps, CALMS
+              Framework, Praktik DevOps, dan Kisah Implementasi DevOps
+            </p>
+          </li>
+          <li class="mb-10 ml-4">
+            <div
+              class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+            ></div>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+              >Februari 2023 - Mei 2023
+            </time>
+            <h3 class="text-lg font-semibold text-black">Internship Rapier Technology International</h3>
+            <p class="text-base font-normal text-gray-500 dark:text-gray-400">
+              Saya magang sebagai UI/UX Desainer dan belajar mengenai cara membuat tampilan website yang baik
+              dan benar menggunakan HTML, CSS, dan JavaScript.
+            </p>
+          </li>
+        </ol>
+      </div>
+    </section>
     <!-- footer -->
     <footer class="bg-white dark:bg-gray-900">
       <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
