[+] Page Skills [+] Img [Fix] footer index & overview

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
             class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-white rounded-md w-52 text-black font-medium"
           >
             <li><a href="overview.html">Overview</a></li>
-            <li><a href=""> Skills</a></li>
+            <li><a href="skills.html"> Skills</a></li>
             <li><a href="">Projects</a></li>
             <li><a href="">Contact</a></li>
           </ul>
@@ -56,7 +56,7 @@
             >
           </li>
           <li>
-            <a class="duration-300 p-3 bg-white hover:bg-black hover:text-white active:bg-blue-600" href=""
+            <a class="duration-300 p-3 bg-white hover:bg-black hover:text-white active:bg-blue-600" href="skills.html"
               >Skills</a
             >
           </li>
