--- a/public/overview.html
+++ b/public/overview.html
@@ -83,9 +83,10 @@
             culpa, quo voluptates consequatur perspiciatis harum facilis.
           </p>
         </div>
-        <div class="my-auto flex justify-center order-1" data-tilt>
+        <div class="my-auto flex justify-center order-1">
           <img
-            class="aspect-auto w-48 rounded-lg items-center"
+            data-tilt-scale="1.1"
+            class="tilt-js aspect-auto w-48 rounded-lg items-center"
             src="/img/Yuzaki Tsukasa Project_ Bride Gallery January  Illustration Released (2).png"
             alt=""
           />
@@ -297,5 +298,12 @@
         </div>
       </div>
     </footer>
+    <script type="text/javascript" src="/js/vanilla-tilt.js"></script>
+    <script type="text/javascript">
+      VanillaTilt.init(document.querySelector(".tilt-js"), {
+        max: 25,
+        speed: 400,
+      });
+    </script>
   </body>
 </html>
