--- a/public/project.html
+++ b/public/project.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="light" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Nafan</title>
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <link
@@ -12,8 +12,6 @@
       href="https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css"
     />
     <script src="script.js"></script>
-    <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css" />
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet" />
   </head>
   <body class="bg-white">
     <!-- Navbar -->
@@ -80,62 +78,88 @@
       </div>
     </div>
     <!-- content -->
-    <main class="mx-12">
-      <div>
-        <h1 class="mt-24 font-bold text-3xl text-black">Skills</h1>
-        <p class="mt-6 text-black">Beberapa kemampuan yang saya miliki</p>
-      </div>
-      <div class="mt-24 md:grid-cols-4 grid text-black justify-items-center gap-6 mb-12">
-        <div
-          data-tilt-scale="1.1"
-          class="tilt-card rounded-md justify-items-center hover:scale-105 duration-300 hover:bg-gradient-to-tr from-red-400 to-blue-400 hover:text-white group"
-        >
-          <i class="fi fi-brands-figma text-6xl justify-center flex m-8"></i>
-          <h1 class="mt-4 text-xl text-black font-semibold text-center group-hover:text-white duration-300">
-            Figma
-          </h1>
-          <p class="mt-2 mb-8 text-sm text-black text-center opacity-50 group-hover:text-white duration-300">
-            Saya cukup mahir dalam pembuatan UI/UX menggunakan Figma.
-          </p>
+    <div class="mb-12">
+      <section class="mx-12 mt-24 md:grid-cols-2 grid text-black">
+        <div class="my-auto flexflex-col justify center h-full">
+          <h1 class="text-3xl font-bold">Project</h1>
+          <p class="mt-6 mb-8 text-black">Berikut beberapa project yang saya berhasil kerjakan</p>
         </div>
-        <div
-          data-tilt-scale="1.1"
-          class="tilt-card rounded-md justify-items-center hover:scale-105 duration-300 hover:bg-gradient-to-tr from-red-400 to-blue-400 hover:text-white group"
-        >
-          <i class="ri-html5-line text-6xl justify-center flex m-8"></i>
-          <h1 class="mt-4 text-xl text-black font-semibold text-center group-hover:text-white duration-300">
-            HTML
-          </h1>
-          <p class="mt-2 mb-8 text-sm text-black text-center opacity-50 group-hover:text-white duration-300">
-            Saya juga cukup mahir dalam pengembangan website menggunakan HTML.
-          </p>
-        </div>
-        <div
-          data-tilt-scale="1.1"
-          class="tilt-card rounded-md justify-items-center hover:scale-105 duration-300 hover:bg-gradient-to-tr from-red-400 to-blue-400 hover:text-white group"
-        >
-          <i class="ri-css3-line text-6xl justify-center flex m-8"></i>
-          <h1 class="mt-4 text-xl text-black font-semibold text-center group-hover:text-white duration-300">
-            CSS
-          </h1>
-          <p class="mt-2 mb-8 text-sm text-black text-center opacity-50 group-hover:text-white duration-300">
-            Saya juga menggunakan Tailwind CSS dalam pengembangan website
-          </p>
-        </div>
-        <div
-          data-tilt-scale="1.1"
-          class="tilt-card rounded-md justify-items-center hover:scale-105 duration-300 hover:bg-gradient-to-tr from-red-400 to-blue-400 hover:text-white group"
-        >
-          <i class="fi fi-brands-js text-6xl justify-center flex m-8"></i>
-          <h1 class="mt-4 text-xl text-black font-semibold text-center group-hover:text-white duration-300">
-            JavaScript
-          </h1>
-          <p class="mt-2 mb-8 text-sm text-black text-center opacity-50 group-hover:text-white duration-300">
-            Saya juga sedikit menggunakan JavaScript untuk membuat halaman web yang interaktif
-          </p>
-        </div>
-      </div>
-    </main>
+        <section class="my-auto grid justify-center grid-cols-2 gap-4">
+          <div
+            class="rounded-md hover:bg-gradient-to-tr duration-300 from-red-300 to-purple-300 hover:scale-105 group tilt-card"
+            data-tilt-scale="1.1"
+          >
+            <img class="rounded-md scale-95 mb-4 mt-1" src="/img/tsukasa_landscape.jpeg" alt="" />
+            <h1 class="text-lg font-semibold text-center group-hover:text-white duration-300">
+              Yuzaki Tsukasa
+            </h1>
+            <p class="opacity-40 mb-8 text-center text-sm group-hover:text-white duration-300">
+              istri gw Lorem ipsum dolor sit amet.
+            </p>
+          </div>
+          <div
+            class="rounded-md hover:bg-gradient-to-tr duration-300 from-red-300 to-purple-300 hover:scale-105 group tilt-card"
+            data-tilt-scale="1.1"
+          >
+            <img class="rounded-md scale-95 mb-4 mt-1" src="/img/tsukasa_landscape.jpeg" alt="" />
+            <h1 class="text-lg font-semibold text-center group-hover:text-white duration-300">
+              Yuzaki Tsukasa
+            </h1>
+            <p class="opacity-40 mb-8 text-center text-sm group-hover:text-white duration-300">
+              istri gw Lorem ipsum dolor sit amet.
+            </p>
+          </div>
+          <div
+            class="rounded-md hover:bg-gradient-to-tr duration-300 from-red-300 to-purple-300 hover:scale-105 group tilt-card"
+            data-tilt-scale="1.1"
+          >
+            <img class="rounded-md scale-95 mb-4 mt-1" src="/img/tsukasa_landscape.jpeg" alt="" />
+            <h1 class="text-lg font-semibold text-center group-hover:text-white duration-300">
+              Yuzaki Tsukasa
+            </h1>
+            <p class="opacity-40 mb-8 text-center text-sm group-hover:text-white duration-300">
+              istri gw Lorem ipsum dolor sit amet.
+            </p>
+          </div>
+          <div
+            class="rounded-md hover:bg-gradient-to-tr duration-300 from-red-300 to-purple-300 hover:scale-105 group tilt-card"
+            data-tilt-scale="1.1"
+          >
+            <img class="rounded-md scale-95 mb-4 mt-1" src="/img/tsukasa_landscape.jpeg" alt="" />
+            <h1 class="text-lg font-semibold text-center group-hover:text-white duration-300">
+              Yuzaki Tsukasa
+            </h1>
+            <p class="opacity-40 mb-8 text-center text-sm group-hover:text-white duration-300">
+              istri gw Lorem ipsum dolor sit amet.
+            </p>
+          </div>
+          <div
+            class="rounded-md hover:bg-gradient-to-tr duration-300 from-red-300 to-purple-300 hover:scale-105 group tilt-card"
+            data-tilt-scale="1.1"
+          >
+            <img class="rounded-md scale-95 mb-4 mt-1" src="/img/tsukasa_landscape.jpeg" alt="" />
+            <h1 class="text-lg font-semibold text-center group-hover:text-white duration-300">
+              Yuzaki Tsukasa
+            </h1>
+            <p class="opacity-40 mb-8 text-center text-sm group-hover:text-white duration-300">
+              istri gw Lorem ipsum dolor sit amet.
+            </p>
+          </div>
+          <div
+            class="rounded-md hover:bg-gradient-to-tr duration-300 from-red-300 to-purple-300 hover:scale-105 group tilt-card"
+            data-tilt-scale="1.1"
+          >
+            <img class="rounded-md scale-95 mb-4 mt-1" src="/img/tsukasa_landscape.jpeg" alt="" />
+            <h1 class="text-lg font-semibold text-center group-hover:text-white duration-300">
+              Yuzaki Tsukasa
+            </h1>
+            <p class="opacity-40 mb-8 text-center text-sm group-hover:text-white duration-300">
+              istri gw Lorem ipsum dolor sit amet.
+            </p>
+          </div>
+        </section>
+      </section>
+    </div>
     <!-- footer -->
     <footer class="bg-white dark:bg-gray-900">
       <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
