--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
           >
             <li><a href="overview.html">Overview</a></li>
             <li><a href="skills.html"> Skills</a></li>
-            <li><a href="">Projects</a></li>
+            <li><a href="project.html">Projects</a></li>
             <li><a href="">Contact</a></li>
           </ul>
         </div>
@@ -63,7 +63,9 @@
             >
           </li>
           <li>
-            <a class="duration-300 p-3 bg-white hover:bg-black hover:text-white active:bg-blue-600" href=""
+            <a
+              class="duration-300 p-3 bg-white hover:bg-black hover:text-white active:bg-blue-600"
+              href="project.html"
               >Projects</a
             >
           </li>
