[+] add contact page [+] asset img [+] connect all navbar page to contact page

--- a/public/contact.html
+++ b/public/contact.html
@@ -12,6 +12,14 @@
       href="https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css"
     />
     <script src="script.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/uicons-thin-rounded/css/uicons-thin-rounded.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/uicons-thin-rounded/css/uicons-thin-rounded.css"
+    />
   </head>
   <body class="bg-white">
     <!-- Navbar -->
@@ -41,7 +49,7 @@
             <li><a href="overview.html">Overview</a></li>
             <li><a href="skills.html"> Skills</a></li>
             <li><a href="project.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="">Contact</a></li>
           </ul>
         </div>
         <a class="btn btn-ghost normal-case text-4xl font-black text-black" href="index.html">N</a>
@@ -70,9 +78,7 @@
             >
           </li>
           <li>
-            <a
-              class="duration-300 p-3 bg-white hover:bg-black hover:text-white active:bg-blue-600"
-              href="contact.html"
+            <a class="duration-300 p-3 bg-white hover:bg-black hover:text-white active:bg-blue-600" href=""
               >Contact</a
             >
           </li>
@@ -80,46 +86,41 @@
       </div>
     </div>
     <!-- content -->
-    <div>
-      <div class="h-screen">
-        <section class="mx-12 mt-24 md:grid-cols-2 grid text-black">
-          <div class="my-auto order-2 flex md:order-1 flex-col justify-center h-full">
-            <h1 class="text-4xl font-bold mb-8">Hai, Saya Naf'an</h1>
-            <p class="mb-8">
-              Saya adalah seorang UI / UX Desainer dan Front-End Developer. Saya menggunakan Figma sebagai
-              software untuk mendesain antarmuka suatu sistem. Saya juga mempelajari HTML, CSS, dan sedikit
-              tentang Java Script untuk pengembangan Website.
-            </p>
-            <div class="flex md:mx-0 mx-auto duration-300 gap-x-6">
-              <a
-                class="duration-300 border-blue-600 border-2 rounded-md p-3 text-white font-medium bg-blue-600 hover:bg-white hover:border-blue-500 hover:border-solid hover:border-2 hover:text-blue-500"
-                href="overview.html"
-                >Go to overview</a
-              >
-              <a
-                class="duration-300 p-3 font-semibold text-blue-600 border-2 rounded-md border-blue-600 hover:bg-blue-600 hover:text-white"
-                href=""
-                >See my project</a
-              >
-            </div>
-          </div>
-          <figure class="flex order-1 md:order-2 justify-center items-center mb-12 md:mb-0">
-            <div class="justify-between">
-              <div class="mockup-code" data-tilt-scale="1.1">
-                <pre data-prefix="$" class="text-xl"><code class="text-xl">Naf'an Nur 'Alim</code></pre>
-                <pre data-prefix=">" class="text-warning text-xl"><code>Hi...</code></pre>
-                <pre
-                  data-prefix="["
-                  class="text-error text-xl"
-                ><code><p class="fw-semibold fs-5 ml-14">I'm a <span class="typed text-purple-500 text-xl"></span></p></code></pre>
-                <pre data-prefix="]" class="text-error text-xl"></pre>
-                <pre data-prefix=">" class="text-success text-xl"><code>Still Learning</code></pre>
+    <section class="h-screen">
+      <div class="mx-12 md:grid-cols-2 grid text-black">
+        <div class="my-auto order-2 flex md:order-1 flex-col justify-center h-full">
+          <h1 class="text-3xl text-black font-bold mt-24">Contact</h1>
+          <p class="mt-6 text-black">Anda bisa menghubungi saya melalui kedua kontak di bawah ini.</p>
+          <div class="mt-12 space-y-4">
+            <div class="flex">
+              <i class="fi fi-tr-phone-call text-white bg-black pt-4 pr-4 pl-4 pb-3 rounded-sm text-2xl"></i>
+              <div class="ml-4 space-y-2">
+                <h1 class="font-medium opacity-75">Phone</h1>
+                <p class="text-xl font-bold">+62 0877 1234 567</p>
               </div>
             </div>
-          </figure>
-        </section>
+            <div class="flex">
+              <i class="fi fi-tr-envelopes text-white bg-black pt-4 pr-4 pl-4 pb-3 rounded-sm text-2xl"></i>
+              <div class="ml-4 space-y-2">
+                <h1 class="font-medium opacity-75">Mail</h1>
+                <p class="text-xl font-bold">someone@gmail.com</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="flex order-1 md:order-2 justify-center items-center md:mb-0 mt-24">
+          <div
+            class="tooltip tilt-card"
+            data-tilt-scale="1.1"
+            data-tip="Aku akan sangat senang sekali mendapatkan pesan dari anda ><"
+          >
+            <button class="">
+              <img class="aspect-auto w-48 rounded-md" src="/img/tsukasa_contact.jpeg" alt="" />
+            </button>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
     <!-- footer -->
     <footer class="bg-white dark:bg-gray-900">
       <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
@@ -135,13 +136,13 @@
               <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Resources</h2>
               <ul class="text-gray-600 dark:text-gray-400 font-medium">
                 <li class="mb-4">
-                  <a href="https://flowbite.com/" target="_blank" class="hover:underline">Flowbite</a>
+                  <a href="https://flowbite.com/" class="hover:underline">Flowbite</a>
                 </li>
                 <li class="mb-4">
-                  <a href="https://daisyui.com/" target="_blank" class="hover:underline">DaisyUI</a>
+                  <a href="https://daisyui.com/" class="hover:underline">DaisyUI</a>
                 </li>
                 <li>
-                  <a href="https://tailwindcss.com/" target="_blank" class="hover:underline">Tailwind CSS</a>
+                  <a href="https://tailwindcss.com/" class="hover:underline">Tailwind CSS</a>
                 </li>
               </ul>
             </div>
@@ -149,15 +150,10 @@
               <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Follow me</h2>
               <ul class="text-gray-600 dark:text-gray-400 font-medium">
                 <li class="mb-4">
-                  <a href="https://github.com/Nafunnn" target="_blank" class="hover:underline">Github</a>
+                  <a href="https://github.com/Nafunnn" class="hover:underline">Github</a>
                 </li>
                 <li>
-                  <a
-                    href="https://discord.com/users/679911423588958285"
-                    target="_blank"
-                    class="hover:underline"
-                    >Discord</a
-                  >
+                  <a href="https://discord.com/users/679911423588958285" class="hover:underline">Discord</a>
                 </li>
               </ul>
             </div>
@@ -190,11 +186,7 @@
               </svg>
               <span class="sr-only">Facebook page</span>
             </a>
-            <a
-              href="https://www.instagram.com/nafunnnnn/"
-              target="_blank"
-              class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
-            >
+            <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
               <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                 <path
                   fill-rule="evenodd"
@@ -212,11 +204,7 @@
               </svg>
               <span class="sr-only">Twitter page</span>
             </a>
-            <a
-              href="https://github.com/Nafunnn"
-              target="_blank"
-              class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
-            >
+            <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
               <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                 <path
                   fill-rule="evenodd"
@@ -244,19 +232,9 @@
         </div>
       </div>
     </footer>
-
-    <script>
-      var typed = new Typed(".typed", {
-        strings: ["UI/UX Designer.", "Front-End.", "Student."],
-        startDelay: 100,
-        typeSpeed: 30,
-        backSpeed: 60,
-        loop: true,
-      });
-    </script>
     <script type="text/javascript" src="/js/vanilla-tilt.js"></script>
     <script type="text/javascript">
-      VanillaTilt.init(document.querySelector(".mockup-code"), {
+      VanillaTilt.init(document.querySelectorAll(".tilt-card"), {
         max: 25,
         speed: 400,
       });
