--- a/public/overview.html
+++ b/public/overview.html
@@ -39,7 +39,7 @@
             <li><a href="overview.html">Overview</a></li>
             <li><a href="skills.html"> Skills</a></li>
             <li><a href="project.html">Projects</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <a class="btn btn-ghost normal-case text-4xl font-black text-black" href="index.html">N</a>
@@ -68,7 +68,9 @@
             >
           </li>
           <li>
-            <a class="duration-300 p-3 bg-white hover:bg-black hover:text-white active:bg-blue-600" href=""
+            <a
+              class="duration-300 p-3 bg-white hover:bg-black hover:text-white active:bg-blue-600"
+              href="contact.html"
               >Contact</a
             >
           </li>
