--- a/public/skills.html
+++ b/public/skills.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet" />
   </head>
+  <style></style>
   <body class="bg-white">
     <!-- Navbar -->
     <div class="navbar bg-white justify-between">
@@ -43,7 +44,7 @@
             <li><a href="overview.html">Overview</a></li>
             <li><a href="skills.html"> Skills</a></li>
             <li><a href="project.html">Projects</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <a class="btn btn-ghost normal-case text-4xl font-black text-black" href="index.html">N</a>
@@ -72,7 +73,9 @@
             >
           </li>
           <li>
-            <a class="duration-300 p-3 bg-white hover:bg-black hover:text-white active:bg-blue-600" href=""
+            <a
+              class="duration-300 p-3 bg-white hover:bg-black hover:text-white active:bg-blue-600"
+              href="contact.html"
               >Contact</a
             >
           </li>
