--- a/public/overview.html
+++ b/public/overview.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overview-Nafan</title>
+    <title>Overview-Rafly</title>
     <meta data-theme="light" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <link rel="stylesheet"
-    href="https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css"
+    <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css">
   </head>
   <body class="bg-white">
     <!-- navbar -->
@@ -42,7 +41,7 @@
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
-        <a class="btn btn-ghost normal-case text-4xl font-black text-black" href="index.html">N</a>
+        <a class="btn btn-ghost normal-case text-4xl font-black text-black" href="index.html">R</a>
       </div>
       <div class="hidden lg:flex font-semibold text-black mx-12">
         <ul class="menu menu-horizontal px-1 justify-end gap-2">
@@ -83,8 +82,9 @@
         <div class="my-auto flex flex-col justify-center order-2 md:order-1">
           <h1 class="text-3xl text-black font-bold">Overview</h1>
           <p class="mt-4 text-black">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis pariatur incidunt iure officia
-            culpa, quo voluptates consequatur perspiciatis harum facilis.
+            I am a software developer with experience in developing applications using the Go language,
+            passionate about exploring blockchain technologies 
+            and learning about new ways to improve the quality and efficiency of app development.
           </p>
         </div>
         <div class="my-auto flex justify-center order-1">
@@ -99,18 +99,18 @@
       <hr class="my-12 mx-12" />
       <!-- timeline -->
       <div class="mx-12">
-        <h1 class="text-2xl text-black font-bold mb-4">Pendidikan</h1>
+        <h1 class="text-2xl text-black font-bold mb-4">Education</h1>
         <ol class="relative border-l border-gray-200 dark:border-gray-700">
           <li class="mb-10 ml-4">
             <div
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
-              >Juli 2018 - Juli 2021</time
+              >Juli 2019 - Juli 2022</time
             >
-            <h3 class="text-lg font-semibold text-black">SMP Negeri 5 Semarang</h3>
+            <h3 class="text-lg font-semibold text-black">SMP Negeri 7 Semarang</h3>
             <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-              Saya menempuh pendidikan di SMP Negeri 5 Semarang selama 3 tahun dan lulus dengan nilai yang
+              Saya menempuh pendidikan di SMP Negeri 7 Semarang selama 3 tahun dan lulus dengan nilai yang
               baik
             </p>
           </li>
@@ -119,7 +119,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
-              >Juli 2021 - Juli 2024</time
+              >Juli 2022 - Juli 2025</time
             >
             <h3 class="text-lg font-semibold text-black">SMK Negeri 8 Semarang</h3>
             <p class="text-base font-normal text-gray-500 dark:text-gray-400">
@@ -128,7 +128,7 @@
             </p>
           </li>
         </ol>
-        <h1 class="text-2xl text-black font-bold mb-4">Pengalaman</h1>
+        <h1 class="text-2xl text-black font-bold mb-4">Experience</h1>
         <ol class="relative border-l border-gray-200 dark:border-gray-700">
           <li class="mb-10 ml-4">
             <div
